--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": "git+https://github.com/pipan/js-presistance.git"
   },
   "dependencies": {
-    "@wildebeest/js-modules": "^0.1.1",
+    "@types/js-cookie": "^2.2.2",
+    "@wildebeest/js-modules": "^0.1.0",
     "js-cookie": "^2.2.0"
   },
   "devDependencies": {
