--- a/package.json
+++ b/package.json
@@ -7,22 +7,29 @@
   "scripts": {
     "build": "tsc --declaration",
     "test": "jest",
-    "deploy": "npm run test && npm run build && git add -A && git commit -m 'deploy' && git push origin master"
+    "deploy": "npm run test && npm run build && git add -A && git commit -m 'build and deploy' && git push origin master",
+    "patch": "npm run deploy && npm version patch && npm publish",
+    "minor": "npm run deploy && npm version minor && npm publish",
+    "major": "npm run deploy && npm version major && npm publish"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pipan/js-presistance.git"
   },
+  "peerDependencies": {
+    "@wildebeest/js-modules": "^0.1.0"
+  },
   "dependencies": {
     "@types/js-cookie": "^2.2.2",
-    "@wildebeest/js-modules": "^0.1.0",
     "js-cookie": "^2.2.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.11",
-    "jest": "^24.7.1",
+    "@types/jest": "^24.0.12",
+    "@wildebeest/js-modules": "^0.1.5",
+    "inversify": "^4.0.0",
+    "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.5"
   },
   "keywords": [
     "js",
